--- a/poemvariation/variation3/style.css
+++ b/poemvariation/variation3/style.css
@@ -4,3 +4,9 @@ body {
     text-align: center;
     background-color: bisque;
 }
+
+body:hover {
+	background: rgba(0,0,0,0);
+	color: #3a7999;
+	box-shadow: inset 0 0 0 3px #3a7999;
+}
