--- a/poemvariation/variation3/style.css
+++ b/poemvariation/variation3/style.css
@@ -5,8 +5,8 @@ body {
     background-color: bisque;
 }
 
-body:hover {
-	background: rgba(0,0,0,0);
+p:hover {
+	background-color: rgba(0,0,0,0);
 	color: pink;
-	box-shadow: inset 0 0 0 3px #3a7999;
+	
 }
